--- a/src/scoreboard/ScoreDialog.module.css
+++ b/src/scoreboard/ScoreDialog.module.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: column;
     width: 100%;
+    justify-content: center;
+    align-items: center;
 }
 
 .textfield {
